[package]
name = "diffuzz"
version = "0.1.0"
authors = ["Lee Bousfield <ljbousfield@gmail.com>"]

[lib]
crate-type = ["dylib"]

[features]
default = ["have_std"]
have_std = ["libc", "rand"]

[dependencies]
typed-arena = {version = "1.4.1", default-features = false}
libc = {version = "0.2.43", optional = true}
rand = {version = "0.5.5", optional = true}
spin = "0.5.0"

[profile.release]
panic = "abort"
